glx/testdata/invalid/invalid-assertion-claims/persons/person-child-bob.glx
persons:
  person-bob:
    properties:
      given_name: "Robert"
      family_name: "Thompson"
      gender: male
